--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,7 +1,73 @@
+absl-py==0.7.0
+affinity==0.1.0
+astor==0.7.1
+boto==2.49.0
+boto3==1.9.94
+botocore==1.12.94
+bz2file==0.98
+cachetools==4.0.0
+certifi==2018.11.29
+chardet==3.0.4
+cycler==0.10.0
+cymem==2.0.2
+cytoolz==0.9.0.1
+dill==0.2.9
+docutils==0.14
+gast==0.2.2
+gensim==3.7.1
+google-auth==1.13.1
+google-auth-oauthlib==0.4.1
+google-pasta==0.2.0
+grpcio==1.18.0
+h5py==2.9.0
+idna==2.8
+jmespath==0.9.3
+Keras==2.2.4
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.0
+kiwisolver==1.2.0
+Markdown==3.0.1
 matplotlib==3.2.1
+msgpack==0.5.6
+msgpack-numpy==0.4.3.2
+murmurhash==1.0.2
+nltk==3.4
 numpy==1.18.3
-pandas==1.0.3
-scikit-learn==0.22.2.post1
+oauthlib==3.1.0
+openslide-python==1.1.1
+opt-einsum==3.2.0
+pandas==0.24.1
+Pillow==7.1.1
+plac==0.9.6
+preshed==2.0.1
+protobuf==3.11.3
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pyparsing==2.4.7
+python-dateutil==2.8.0
+pytz==2018.9
+PyYAML==3.13
+regex==2018.1.10
+requests==2.21.0
+requests-oauthlib==1.3.0
+rsa==4.0
+s3transfer==0.2.0
+scikit-learn==0.20.2
 scipy==1.4.1
+singledispatch==3.4.0.3
+six==1.12.0
 sklearn==0.0
-
+smart-open==1.8.0
+spacy==2.0.18
+tensorboard==2.1.1
+tensorflow==2.1.0
+tensorflow-estimator==2.1.0
+termcolor==1.1.0
+thinc==6.12.1
+toolz==0.9.0
+tqdm==4.31.1
+ujson==1.35
+urllib3==1.24.1
+Werkzeug==0.14.1
+wrapt==1.12.1
+XlsxWriter==1.2.8
